// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarComponent standard props matches snapshot 1`] = `
<span>
  <label
    className="flush--bottom"
    data-requiredtext="(undefined)"
    htmlFor="beyonce"
  >
    Enter Your Favorite Day
  </label>
  <div
    className="helperTextContainer"
  >
    I'm here to help
  </div>
  <DateTimePicker
    aria-label="Use arrow keys to navigate the calendar"
    className="input--dateTimePicker select--reset field--error beyonce-halo"
    id="beyonce"
    onChange={[Function]}
    options={
      Object {
        "altFormat": "D M d, Y",
        "altInput": true,
        "dateFormat": "m-d-Y",
        "nextArrow": "<span class=\\"svg svg--chevron-right\\">
      				<svg preserveAspectRatio=\\"xMinYMin meet\\" width=\\"12\\" height=\\"12\\" viewBox=\\"0 0 12 12\\" className=\\"svg-icon valign--middle\\" role=\\"img\\">
      				<use xlink:href=\\"#icon-chevron-right\\" />
      				</svg>
      			</span>",
        "prevArrow": "<span class=\\"svg svg--chevron-left\\">
      				<svg preserveAspectRatio=\\"xMinYMin meet\\" width=\\"12\\" height=\\"12\\" viewBox=\\"0 0 12 12\\" className=\\"svg-icon valign--middle\\" role=\\"img\\">
      				<use xlink:href=\\"#icon-chevron-left\\" />
      				</svg>
      			</span>",
      }
    }
    value={2012-10-12T00:00:00.000Z}
  />
</span>
`;

exports[`CalendarComponent suppressed error matches snapshot 1`] = `
<span>
  <label
    className="flush--bottom"
    data-requiredtext="(undefined)"
    htmlFor="beyonce"
  >
    Enter Your Favorite Day
  </label>
  <div
    className="helperTextContainer"
  >
    I'm here to help
  </div>
  <DateTimePicker
    aria-label="Use arrow keys to navigate the calendar"
    className="input--dateTimePicker select--reset field--error beyonce-halo"
    id="beyonce"
    onChange={[Function]}
    options={
      Object {
        "altFormat": "D M d, Y",
        "altInput": true,
        "dateFormat": "m-d-Y",
        "nextArrow": "<span class=\\"svg svg--chevron-right\\">
      				<svg preserveAspectRatio=\\"xMinYMin meet\\" width=\\"12\\" height=\\"12\\" viewBox=\\"0 0 12 12\\" className=\\"svg-icon valign--middle\\" role=\\"img\\">
      				<use xlink:href=\\"#icon-chevron-right\\" />
      				</svg>
      			</span>",
        "prevArrow": "<span class=\\"svg svg--chevron-left\\">
      				<svg preserveAspectRatio=\\"xMinYMin meet\\" width=\\"12\\" height=\\"12\\" viewBox=\\"0 0 12 12\\" className=\\"svg-icon valign--middle\\" role=\\"img\\">
      				<use xlink:href=\\"#icon-chevron-left\\" />
      				</svg>
      			</span>",
      }
    }
    suppressError={true}
    value={2012-10-12T00:00:00.000Z}
  />
</span>
`;
